--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -1,6 +1,35 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<h1>Index Shop</h1>
+﻿@model IEnumerable<shop_MahdiTaremi.Models.Product>
+
+<h1>Index Shop</h1>  
+
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Color</th>
+            <th scope="col">Description</th>
+            <th scope="col">Edit</th>
+            <th scope="col">Delete</th>
+        </tr>
+    </thead>
+
+    <tbody>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.Id</td>
+                <td>@item.Name</td>
+                <td>@item.Price</td>
+                <td>@item.Quantity</td>
+                <td>@item.Color</td>
+                <td>@item.Description</td>
+                <td><input type="button" value="Edit" /></td>
+                <td><input type="button" value="Delete" /></td>
+            </tr>
+        }
+    </tbody>
+</table>
