--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -2,6 +2,8 @@
 
 <h1>Index Shop</h1>  
 
+<!--
+
 <table class="table">
     <thead>
         <tr>
@@ -18,18 +20,21 @@
 
     <tbody>
 
-        @foreach (var item in Model)
+     foreach (var item in Model) 
         {
             <tr>
-                <td>@item.Id</td>
-                <td>@item.Name</td>
-                <td>@item.Price</td>
-                <td>@item.Quantity</td>
-                <td>@item.Color</td>
-                <td>@item.Description</td>
-                <td><input type="button" value="Edit" /></td>
-                <td><input type="button" value="Delete" /></td>
+                <td>item.Id</td>
+                <td>item.Name</td>
+                <td>item.Price</td>
+                <td>item.Quantity</td>
+                <td>item.Color</td>
+                <td>item.Description</td>
+                <td><input type="button" value="Edit" class="btn btn-light" /></td>
+                <td><input type="button" value="Delete" class="btn btn-danger" /></td>
             </tr>
         }
+       
     </tbody>
 </table>
+-->
+
