Try Show Data in Tabel

--- a/Views/Shop/BuyShop.cshtml
+++ b/Views/Shop/BuyShop.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model Product
+
 <form method="post" action="BuyShopAction">
     <div class="mb-3">
         <label for="exampleInputName" class="form-label">Name: </label>
