--- a/Views/Shop/BuyShop.cshtml
+++ b/Views/Shop/BuyShop.cshtml
@@ -17,6 +17,19 @@
         <label for="exampleInputColor" class="form-label">Color: </label>
         <input type="text" class="form-control" id="exampleInputColor" name="Color" aria-describedby="emailHelp">
     </div>
+    <div class="form-group">
+        <label>وضعیت:</label>
+        <div class="radio">
+            <label><input type="radio" name="Status" value="OK">فعال</label>
+        </div>
+        <div class="radio">
+            <label><input type="radio" name="Status" value="No">غیرفعال</label>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="date">تاریخ:</label>
+        <input type="date" class="form-control" id="Date" name="Date">
+    </div>
     <div class="mb-3">
         <label for="exampleInputDescription" class="form-label">Description: </label>
         <input type="text" class="form-control" id="exampleInputDescription" name="Description" aria-describedby="emailHelp">
