--- a/Views/Shop/Index.cshtml
+++ b/Views/Shop/Index.cshtml
@@ -14,6 +14,8 @@
             <th scope="col">Price</th>
             <th scope="col">Quantity</th>
             <th scope="col">Color</th>
+            <th scope="col">Status</th>
+            <th scope="col">Date</th>
             <th scope="col">Description</th>
             <th scope="col">Edit</th>
             <th scope="col">Delete</th>
@@ -30,6 +32,8 @@
                 <td>@item.Price</td>
                 <td>@item.Quantity</td>
                 <td>@item.Color</td>
+                <td>@item.Status</td>
+                <td>@item.Date</td>
                 <td>@item.Description</td>
                 <td><input type="button" value="Edit" class="btn btn-light" /></td>
                 <td><input type="button" value="Delete" class="btn btn-danger" /></td>
